炫彩编程助手/Data/DemoMgr/VB/Lib/xcgui.bas


Declare Function XDateTime_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XDateTime_SetStyle Lib "xcgui.dll" (ByVal hEle As Long, ByVal nStyle As Long)
Declare Function XDateTime_GetStyle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XDateTime_GetTime Lib "xcgui.dll" (ByVal hEle As Long, ByVal pnHour As Long, ByVal pnMinute As Long, ByVal pnSecond As Long)
Declare Sub XDateTime_SetTime Lib "xcgui.dll" (ByVal hEle As Long, ByVal nHour As Long, ByVal nMinute As Long, ByVal nSecond As Long)
Declare Sub XDateTime_GetDate Lib "xcgui.dll" (ByVal hEle As Long, ByVal pnYear As Long, ByVal pnMonth As Long, ByVal pnDay As Long)
Declare Sub XDateTime_SetDate Lib "xcgui.dll" (ByVal hEle As Long, ByVal nYear As Long, ByVal nMonth As Long, ByVal nDay As Long)
Declare Function XDateTime_GetSelBkColor Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XDateTime_SetSelBkColor Lib "xcgui.dll" (ByVal hEle As Long, ByVal crSelectBk As Long, ByVal alpha As Byte)
Declare Function XDateTime_GetButton Lib "xcgui.dll" (ByVal hEle As Long, ByVal nType As Long) As Long
Declare Function XMonthCal_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XMonthCal_SetToday Lib "xcgui.dll" (ByVal hEle As Long, ByVal nYear As Long, ByVal nMonth As Long, ByVal nDay As Long)
Declare Sub XMonthCal_GetToday Lib "xcgui.dll" (ByVal hEle As Long, ByVal pnYear As Long, ByVal pnMonth As Long, ByVal pnDay As Long)
Declare Sub XMonthCal_SeSelDate Lib "xcgui.dll" (ByVal hEle As Long, ByVal nYear As Long, ByVal nMonth As Long, ByVal nDay As Long)
Declare Sub XMonthCal_GetSelDate Lib "xcgui.dll" (ByVal hEle As Long, ByVal pnYear As Long, ByVal pnMonth As Long, ByVal pnDay As Long)
Declare Function XMonthCal_GetButton Lib "xcgui.dll" (ByVal hEle As Long, ByVal nType As Long) As Long
Declare Function XC_UnicodeToAnsi Lib "xcgui.dll" (ByVal pIn As String, ByVal inLen As Long, ByVal pOut As String, ByVal outLen As Long) As Long
Declare Function XC_AnsiToUnicode Lib "xcgui.dll" (ByVal pIn As String, ByVal inLen As Long, ByVal pOut As String, ByVal outLen As Long) As Long
Declare Sub XC_DebugToFileInfo Lib "xcgui.dll" (ByVal pInfo As String)
Declare Function XC_IsHELE Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XC_IsHWINDOW Lib "xcgui.dll" (ByVal hWindow As Long) As Boolean
Declare Function XC_IsShape Lib "xcgui.dll" (ByVal hShape As Long) As Boolean
Declare Function XC_IsHXCGUI Lib "xcgui.dll" (ByVal hXCGUI As Long, ByVal nType As Long) As Boolean
Declare Function XC_hWindowFromHWnd Lib "xcgui.dll" (ByVal hWnd As Long) As Long
Declare Function XC_RegisterWindowClassName Lib "xcgui.dll" (ByVal pClassName As String) As Boolean
Declare Function XC_IsSViewExtend Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XC_GetObjectType Lib "xcgui.dll" (ByVal hXCGUI As Long) As Long
Declare Function XC_GetObjectByID Lib "xcgui.dll" (ByVal nID As Long) As Long
Declare Function XC_GetResIDValue Lib "xcgui.dll" (ByVal pName As String) As Long
Declare Sub XC_SetPaintFrequency Lib "xcgui.dll" (ByVal nMilliseconds As Long)
Declare Function XC_RectInRect Lib "xcgui.dll" (ByVal pRect1 As rect, ByVal pRect2 As rect) As Boolean
Declare Sub XC_CombineRect Lib "xcgui.dll" (ByVal pDest As rect, ByVal pSrc1 As rect, ByVal pSrc2 As rect)
Declare Sub XC_ShowLayoutFrame Lib "xcgui.dll" (ByVal bShow As Boolean)
Declare Sub XC_EnableDebugFile Lib "xcgui.dll" (ByVal bEnable As Boolean)
Declare Sub XC_SetLayoutFrameColor Lib "xcgui.dll" (ByVal color As Long)
Declare Sub XC_EnableErrorMessageBox Lib "xcgui.dll" (ByVal bEnabel As Boolean)
Declare Function XC_LoadLayout Lib "xcgui.dll" (ByVal pFileName As String, ByVal hParent As Long) As Long
Declare Function XC_LoadLayoutFromString Lib "xcgui.dll" (ByVal pStringXML As String, ByVal hParent As Long) As Long
Declare Function XC_LoadResource Lib "xcgui.dll" (ByVal pFileName As String, ByVal pDir As String) As Boolean
Declare Function XC_LoadResourceFromString Lib "xcgui.dll" (ByVal pStringXML As String, ByVal pDir As String) As Boolean
Declare Function XC_LoadTemplate Lib "xcgui.dll" (ByVal nType As Long, ByVal pFileName As String) As template_info_i
Declare Function XC_LoadTemplateFromString Lib "xcgui.dll" (ByVal nType As Long, ByVal pStringXML As String) As template_info_i
Declare Sub XC_TemplateDestroy Lib "xcgui.dll" (ByVal pInfo As template_info_i)
Declare Sub XC_GetTextSize Lib "xcgui.dll" (ByVal pString As String, ByVal length As Long, ByVal hFontx As Long, ByVal pOutSize As size)
Declare Sub XC_GetTextShowSize Lib "xcgui.dll" (ByVal pString As String, ByVal length As Long, ByVal hFontx As Long, ByVal pOutSize As size)
Declare Function XC_GetDefaultFont Lib "xcgui.dll" () As Long
Declare Sub XC_SetDefaultFont Lib "xcgui.dll" (ByVal hFontx As Long)
Declare Sub XC_InitFont Lib "xcgui.dll" (ByVal pFont As LOGFONTW, ByVal pName As String, ByVal size As Long, ByVal bBold As Boolean, ByVal bItalic As Boolean, ByVal bUnderline As Boolean, ByVal bStrikeOut As Boolean)
Declare Function XC_Malloc Lib "xcgui.dll" (ByVal size As Long) As Long
Declare Sub XC_Free Lib "xcgui.dll" (ByVal p As Long)
'Declare Sub _XC_SetType Lib "xcgui.dll" (ByVal hXCGUI As Long,ByVal nType As Long)
'Declare Sub _XC_AddType Lib "xcgui.dll" (ByVal hXCGUI As Long,ByVal nType As Long)
'Declare Sub _XC_BindData Lib "xcgui.dll" (ByVal hXCGUI As Long,ByVal data As Long)
'Declare Function _XC_GetBindData Lib "xcgui.dll" (ByVal hXCGUI As Long) As Long
Declare Function XInitXCGUI Lib "xcgui.dll" (ByVal pText As String) As Boolean
Declare Sub XRunXCGUI Lib "xcgui.dll" ()
Declare Sub XExitXCGUI Lib "xcgui.dll" ()
Declare Function XBkInfoM_Create Lib "xcgui.dll" () As Long
Declare Sub XBkInfoM_Destroy Lib "xcgui.dll" (ByVal hBkInfoM As Long)
Declare Function XBkInfoM_SetBkInfo Lib "xcgui.dll" (ByVal hBkInfoM As Long, ByVal pText As String) As Long
Declare Sub XBkInfoM_AddBorder Lib "xcgui.dll" (ByVal hBkInfoM As Long, ByVal nState As Long, ByVal color As Long, ByVal alpha As Byte, ByVal width As Long)
Declare Sub XBkInfoM_AddFill Lib "xcgui.dll" (ByVal hBkInfoM As Long, ByVal nState As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XBkInfoM_AddImage Lib "xcgui.dll" (ByVal hBkInfoM As Long, ByVal nState As Long, ByVal hImage As Long)
Declare Function XBkInfoM_GetCount Lib "xcgui.dll" (ByVal hBkInfoM As Long) As Long
Declare Sub XBkInfoM_Clear Lib "xcgui.dll" (ByVal hBkInfoM As Long)
Declare Function XBkInfoM_Draw Lib "xcgui.dll" (ByVal hBkInfoM As Long, ByVal nState As Long, ByVal hDraw As Long, ByVal pRect As rect) As Boolean
Declare Function XBkInfoM_DrawEx Lib "xcgui.dll" (ByVal hBkInfoM As Long, ByVal nState As Long, ByVal hDraw As Long, ByVal pRect As rect, ByVal nStateFilter As Long) As Boolean
Declare Function XBtn_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pName As String, ByVal hParent As Long) As Long
Declare Function XBtn_IsCheck Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XBtn_SetCheck Lib "xcgui.dll" (ByVal hEle As Long, ByVal bCheck As Boolean) As Boolean
Declare Sub XBtn_SetState Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long)
Declare Function XBtn_GetState Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XBtn_GetStateEx Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetStyle Lib "xcgui.dll" (ByVal hEle As Long, ByVal nStyle As Long)
Declare Function XBtn_GetStyle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetType Lib "xcgui.dll" (ByVal hEle As Long, ByVal nType As Long)
Declare Function XBtn_GetType Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetGroupID Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long)
Declare Function XBtn_GetGroupID Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetBindEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hBindEle As Long)
Declare Function XBtn_GetBindEle Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetTextAlign Lib "xcgui.dll" (ByVal hEle As Long, ByVal nFlags As Long)
Declare Function XBtn_GetTextAlign Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_SetIconAlign Lib "xcgui.dll" (ByVal hEle As Long, ByVal align As Long)
Declare Sub XBtn_SetOffset Lib "xcgui.dll" (ByVal hEle As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XBtn_SetOffsetIcon Lib "xcgui.dll" (ByVal hEle As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XBtn_SetIconSpace Lib "xcgui.dll" (ByVal hEle As Long, ByVal size As Long)
Declare Sub XBtn_GetText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pOut As Long, ByVal nOutLen As Long)
Declare Sub XBtn_SetText Lib "xcgui.dll" (ByVal hEle As Long, ByVal pName As String)
Declare Sub XBtn_SetIcon Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_SetIconDisable Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Sub XBtn_AddAnimationFrame Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long, ByVal uElapse As Long)
Declare Sub XBtn_EnableAnimation Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean, ByVal bLoopPlay As Boolean)
Declare Sub XBtn_AddBkBorder Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long, ByVal color As Long, ByVal alpha As Byte, ByVal width As Long)
Declare Sub XBtn_AddBkFill Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XBtn_AddBkImage Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long, ByVal hImage As Long)
Declare Function XBtn_GetBkInfoCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XBtn_ClearBkInfo Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XComboBox_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XComboBox_SetSelItem Lib "xcgui.dll" (ByVal hEle As Long, ByVal iIndex As Long) As Boolean
Declare Sub XComboBox_GetButtonRect Lib "xcgui.dll" (ByVal hEle As Long, ByVal pRect As rect)
Declare Sub XComboBox_SetButtonSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal size As Long)
Declare Sub XComboBox_SetDropHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal height As Long)
Declare Function XComboBox_GetDropHeight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XComboBox_BindApapter Lib "xcgui.dll" (ByVal hEle As Long, ByVal hAdapter As Long)
Declare Function XComboBox_GetApapter Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XComboBox_SetItemTemplateXML Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String)
Declare Sub XComboBox_SetItemTemplateXMLFromString Lib "xcgui.dll" (ByVal hEle As Long, ByVal pStringXML As String)
Declare Sub XComboBox_EnableDrawButton Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XComboBox_EnableEdit Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEdit As Boolean)
Declare Sub XComboBox_AddBkBorder Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long, ByVal color As Long, ByVal alpha As Byte, ByVal width As Long)
Declare Sub XComboBox_AddBkFill Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XComboBox_AddBkImage Lib "xcgui.dll" (ByVal hEle As Long, ByVal nState As Long, ByVal hImage As Long)
Declare Function XComboboX_GetBkInfoCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XComboBox_ClearBkInfo Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XComboBox_GetSelItem Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XComboBox_GetState Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XAdapter_Destroy Lib "xcgui.dll" (ByVal hAdapter As Long)
